add sqs node-squarespace-server conf

--- a/template.conf
+++ b/template.conf
@@ -34,7 +34,11 @@
     "gallery",
     "events",
     "album"
-  ]
+  ],
+"server": {
+    "siteurl": "https://iig-ubc.squarespace.com",
+    "sandbox": true
+}
 
 }
 
